Add user authentication and admin management features
Introduced user registration, login, profile management, and admin user management endpoints. Added IUserService and UserService for business logic, IUserRepository and UserRepository for data access, and DTOs for user operations. Integrated JWT authentication, updated dependency injection, and configured Swagger for API documentation. Added MathslideLearning.Models project and refactored solution/project files accordingly.

--- a/MathslideLearning/MathslideLearning.csproj
+++ b/MathslideLearning/MathslideLearning.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Compile Remove="Models\**" />
+    <Content Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathslideLearning.Business\MathslideLearning.Business.csproj" />
+    <ProjectReference Include="..\MathslideLearning.Models\MathslideLearning.Models.csproj" />
   </ItemGroup>
 
 </Project>
