--- a/MathslideLearning.Business/MathslideLearning.Business.csproj
+++ b/MathslideLearning.Business/MathslideLearning.Business.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathslideLearning.Data\MathslideLearning.Data.csproj" />
+    <ProjectReference Include="..\MathslideLearning.Models\MathslideLearning.Models.csproj" />
   </ItemGroup>
 
 </Project>
