Add file upload support for slides
Introduced IFileService and its implementation to handle file storage and deletion. Updated ISlideService and SlideService to support file uploads when creating or updating slides, and ensured files are deleted when slides are removed. Modified SlidesController to accept multipart/form-data for slide creation and updates, and adjusted endpoints accordingly. Updated project files and Program.cs to support static file serving and dependency injection for file services.

--- a/MathslideLearning/MathslideLearning.csproj
+++ b/MathslideLearning/MathslideLearning.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\MathslideLearning.Models\MathslideLearning.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
