--- a/MathslideLearning.Business/MathslideLearning.Business.csproj
+++ b/MathslideLearning.Business/MathslideLearning.Business.csproj
@@ -5,7 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	
+  <ItemGroup>
+	<FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\MathslideLearning.Data\MathslideLearning.Data.csproj" />
     <ProjectReference Include="..\MathslideLearning.Models\MathslideLearning.Models.csproj" />
@@ -17,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
